core/inbound/src/main/fabric8/camel-webservice-default-route.yml
apiVersion: v1
kind: Route
spec:
  port:
    targetPort: 8181
  to:
    kind: Service
    name: inbound-rest
    weight: 100
  wildcardPolicy: None
status: {}
